edition = "2023";

package proto;

message ActionStatusResponse {}
