/*
 * A workflow represents the work that has to be executed on a particular
 * hardware.
 */
edition = "2023";

package proto;

option go_package = "github.com/tinkerbell/tinkerbell/pkg/proto";

import "get_action_request.proto";
import "get_action_response.proto";
import "report_action_status_request.proto";
import "report_action_status_response.proto";

/*
 * WorkflowService for getting actions and reporting the status of the actions
 */
service WorkflowService {
  rpc GetAction(ActionRequest) returns (ActionResponse) {}
  rpc ReportActionStatus(ActionStatusRequest) returns (ActionStatusResponse) {}
}
